# apple-music-to-slack

./: Cargo.toml  README.md  xyz.dignam.apple-music-to-slack.plist
src/: get_current_track.js  main.rs
