[package]
name = "apple-music-to-slack"
version = "0.1.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.18"
